# csvtoron

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: bodiesdata.csv  bodiesdata.ron  bodiesorbit.csv  bodiesorbit.ron
examples/: converter.rs
src/: lib.rs  main.rs
