[package]
name = "csvtoron"
version = "0.3.0"
edition = "2021"
license = "MIT"
author = ["Hartmut"]
description = "converting csv file to the ron format"
documentation = "https://docs.rs/csvtoron"
repository = "https://github.com/hartmut/csvtoron"
readme = "README.md"
exclude = [
    "assets/*",
]

[lib]
name = "csvtoron"

[dependencies]
ron = "0.6"
serde = { version = "1", features = ["derive"] }
csv = "1.1"

[[example]]
name = "converter"
